--- a/.github/workflows/check-dependent-prs.yml
+++ b/.github/workflows/check-dependent-prs.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Check PR dependencies
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT_TOKEN }}
           script: |
             const owner = context.repo.owner;
             const repo = context.repo.repo;
